Updates heading on welcome page

--- a/views/index.html
+++ b/views/index.html
@@ -216,7 +216,7 @@ pre {
 
 <section class='container'>
           <hgroup>
-            <h1>Welcome to <span lang="it">s.saino awesome</span> Node.js application on OpenShift</h1>
+            <h1>Welcome to <span lang="it">simone saino awesome</span> Node.js application on OpenShift</h1>
           </hgroup>
 
 
